<resources>
    <string name="app_name">TodoList</string>
    <string name="time_st">Time</string>
    <string name="status_st">Status</string>
    <string name="des_st">Description</string>
    <string name="title_st">Title</string>
    <string name="add_st">Add</string>
    <string name="hint_st">Enter new job</string>
    <string name="add_hours">Choose Hours</string>
    <string name="list_task">Tasks</string>
    <string name="add_new">Add a new job</string>
    <string name="choose_day">Choose Day</string>
    <string name="choose_hours">Choose Hours</string>
    <string name="selectedtime">Selected Time</string>
    <string name="title_required">Title Required</string>

</resources>