<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddTaskActivity"
    android:padding="16dp">

    <TextView
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="@string/add_new"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/taskInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_st" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_day" />
        <TextView
            android:id="@+id/tvDay"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPickHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hours" />
        <TextView
            android:id="@+id/tvHours"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton

        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/btnAddToList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_st" />


</LinearLayout>